logs/rpicourses.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/RPICourses-1.0.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rpi_courses'...
Listing './lib/python3.5/site-packages/rpi_courses/parser'...
Compiling './lib/python3.5/site-packages/rpi_courses/scheduler.py'...
***   File "./lib/python3.5/site-packages/rpi_courses/scheduler.py", line 20
    print self.days_of_week, days
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rpi_courses/sis_parser'...
Compiling './lib/python3.5/site-packages/rpi_courses/sis_parser/features.py'...
***   File "./lib/python3.5/site-packages/rpi_courses/sis_parser/features.py", line 175
    print columns
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rpi_courses/utils.py'...
***   File "./lib/python3.5/site-packages/rpi_courses/utils.py", line 14
    print "Unsafe Int: %s" % n
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rpi_courses/web.py'...
***   File "./lib/python3.5/site-packages/rpi_courses/web.py", line 95
    print "Getting communication intensive list from: " + url
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/rpi_courses'...
Compiling './lib/python3.5/site-packages/test/rpi_courses/test_sis_parser.py'...
***   File "./lib/python3.5/site-packages/test/rpi_courses/test_sis_parser.py", line 164
    print course.sections[0].periods
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
